syntax = "proto3";

package DogType;


message Dog {
    string name = 1;
    uint32 age = 2;
}


message Vetulus {
    string name = 1;
    string description = 2;
    string adt = 3;
    string address = 4;
    int32 port = 5;
    string log_path = 6;
}
